--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Django</h1>
+    <h3>Browse blogs in following category</h3>
+
+    {% for category in categories %}
+    <p>{{category.id}} {{category.name}}</p>
+
+    {% endfor %}
   </body>
 </html>
